--- a/trunk/twitterscraper/.classpath
+++ b/trunk/twitterscraper/.classpath
@@ -8,5 +8,7 @@
 	<classpathentry kind="lib" path="lib/twitter4j-media-support-2.2.0.jar"/>
 	<classpathentry kind="lib" path="lib/twitter4j-stream-2.2.0.jar"/>
 	<classpathentry kind="lib" path="lib/opencsv-2.2.jar"/>
+	<classpathentry kind="lib" path="lib/weka.jar"/>
+	<classpathentry kind="lib" path="lib/snowball-20051019.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
